bullet 2 done. added a 'clear all' button.

--- a/shapes.html
+++ b/shapes.html
@@ -25,6 +25,7 @@
         <label>Text for next generated circle:</label>
         <input type="text" name="circleText" id="circleText"><br>
     </form>
+    <button id="clearAllCircles">Clear All Circles</button>
     <div id="circleContainer"></div>
     
 </body>
