bullet 3 done. clicking a shape gives the user an alert of that shape's color and text values

--- a/shapes.html
+++ b/shapes.html
@@ -5,6 +5,7 @@
     * Date Started: Feb. 10, 2017
     * Date Last Updated: Feb. 10, 2017
     * Amount of time spent coding: 2 hours
+    * Github: https://github.com/masonziedonis/coding-challenges/tree/clover
     *
     * Description: This is my file for the initial coding challenge portion of Clover's intership interview process. I had two hours to complete the challenge.
     *
@@ -20,12 +21,14 @@
 </head>
     
 <body>
-    <button id="generateCircle">Generate Random Circle</button>  
-    <form>
-        <label>Text for next generated circle:</label>
-        <input type="text" name="circleText" id="circleText"><br>
-    </form>
-    <button id="clearAllCircles">Clear All Circles</button>
+    <div id="controlMenu">
+        <button id="generateCircle">Generate Random Circle</button>  
+        <form>
+            <label>Text for next generated circle:</label>
+            <input type="text" name="circleText" id="circleText"><br>
+        </form>
+        <button id="clearAllCircles">Clear All Circles</button>
+    </div>
     <div id="circleContainer"></div>
     
 </body>
