bullet 4 done. circles are confined to the edges of the window. challenge complete.

--- a/shapes.html
+++ b/shapes.html
@@ -4,12 +4,12 @@
     * Program Name: Clover Technical Challenge
     * Date Started: Feb. 10, 2017
     * Date Last Updated: Feb. 10, 2017
-    * Amount of time spent coding: 2 hours
+    * Amount of time spent coding: 4 hours
     * Github: https://github.com/masonziedonis/coding-challenges/tree/clover
     *
-    * Description: This is my file for the initial coding challenge portion of Clover's intership interview process. I had two hours to complete the challenge.
+    * Description: This is my file for the initial coding challenge portion of Clover's intership interview process. 
     *
-    * Copyright (C) 2017 Mason Ziedonis 
+    * Copyright (C) 2017 Mason Ziedonis  
 -->
 
 <html>
